--- a/css/app.css
+++ b/css/app.css
@@ -58,3 +58,15 @@ h2 {
 #barcelona {
     background-color: #800000;
 }
+
+#new-zealand {
+    background-color: #03a9f4;
+}
+
+#montenegro {
+    background-color: #d32f2f;
+}
+
+#monaco {
+    background-color: #388e3c;
+}
